# ChangeLog for phpwsbb
# $Id: ChangeLog,v 1.1 2008/08/23 04:19:22 adarkling Exp $
========================
Changes in version 2.0.4
========================
+ Fixed inefficient query generated when listing topics in a forum.
+ PHP5 fixes
+ (24 August 2009) Fixed problems with the forum listing
+ (9 June 2009) Patch #2795892 - Fixed translation typo. Thanks HanV.

========================
Changes in version 2.0.4
========================
+ Changed topics' edit permission to `manage forums` SuperModerators' comments will always be approved no matter what.
+ `Create Topic` form now only asks for an anonymous name if both Comments & the Forum settings allow it.

========================
Changes in version 2.0.3
========================
+ Forms use `break post` now.
+ Memory usage optimization
+ Fixed approval bug reported by Verdon http://www.phpwsforums.com/showpost.php?p=30440
+ Improved display of unapproved topics
+ Forum List `Topics` counter was including unapproved articles.  Fixed.
+ Fixed homepage filter bug reported by Verdon http://www.phpwsforums.com/showpost.php?p=30460
+ Fixed topic permissions bug reported by Verdon http://www.phpwsforums.com/showpost.php?p=30460

========================
Changes in version 2.0.2
========================
+ Fixed "Fatal error: Class `PHPWSBB_Forms` not found" bug
+ Adjusted formatting of forum.tpl
+ Minor php5 compatibility change

========================
Changes in version 2.0.1
========================
+ Fixed a bug that was preventing the first Forum from being created.  Thanks, jmullan99!
+ Message Boards & Latest Forum Posts blocks now only appear on the home page.
+ Message Boards & Latest Forum Posts blocks now have their own template files.

========================
Changes in version 2.0.0
========================
+ Rewritten Version for phpWebsite 1.x

*phpwsbb-1.0.4 (sometime soon)
    Bug Fixes:
    * Changes to 'save' messages and buttons to be in context
    * Allow 'Re:' to be translated