@@ -1,0 +1,35 @@
+<?php
+/**
+ * See docs/AUTHORS and docs/COPYRIGHT for relevant info.
+ *
+ * This program is free software; you can redistribute it and/or modify
+ * it under the terms of the GNU Lesser General Public License as published by
+ * the Free Software Foundation; either version 3 of the License, or
+ * (at your option) any later version.
+ *
+ * This program is distributed in the hope that it will be useful,
+ * but WITHOUT ANY WARRANTY; without even the implied warranty of
+ * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+ * GNU Lesser General Public License for more details.
+ *
+ * The icons used in this collection are from the Tango image collection. Instead of
+ * individual images these images are mainly in a map. Some images are still individual files.
+ *
+ * All mapped images use blank.png which is 24px by 24px. Mapped images cannot
+ * be resized.
+ *
+ * Most icons are from Tango. Some individual icons are from Fugue Icons. See CREDIT file for
+ * more information.
+ *
+ * @version $Id$
+ * @author Eloi George <eloi at bygeorgeware dot com>
+ * @package
+ * @license http://opensource.org/licenses/gpl-3.0.html
+ */
+
+$icons['new_messages'] = array('src'=>'new_messages.png', 'label'=>dgettext('phpwsbb', 'New Posts'));
+$icons['no_new_messages'] = array('src'=>'no_new_messages.png', 'label'=>dgettext('phpwsbb', 'No New Posts'));
+$icons['go_new_message'] = array('src'=>'new_message.png', 'label'=>dgettext('comments', 'View the last post'));
+$icons['hot_topic'] = array('src'=>'Tango-heart.png', 'label'=>dgettext('phpwsbb', ''));
+
+?>
